more java 9 migration fixes